tests/paczka1/small_fuzzy/42713746.err
Error in line 9: umWovRi4 A238 24,6
Error in line 13: ffLi2I6 A215 -1,4
